--- a/WidmyAuth0/requirements.txt
+++ b/WidmyAuth0/requirements.txt
@@ -1,6 +1,10 @@
-Django==2.2.28
-psycopg2==2.7.7
-psycopg2-binary==2.7.7
+Django==3.0.4
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
 pytz
 sqlparse
 jsonfield
+PyJWT==1.7.1
+cryptography==2.8
+python-dotenv==0.10.1
+social-auth-app-django==3.1.0
